// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-table can sort "Name" column ascending 1`] = `
<div>
  <div
    class="Vlt-table"
    id=""
  >
    <table>
      <thead>
        <tr>
          <!--v-if-->
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        
        
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table can sort "Name" column descending 1`] = `
<div>
  <div
    class="Vlt-table"
    id=""
  >
    <table>
      <thead>
        <tr>
          <!--v-if-->
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        
        
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table pagination is shown 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <div
    class="Vlt-table__pagination"
  >
    <ul>
      <!--v-if-->
      <li
        class="Vlt-table__pagination__current"
      >
        <a
          href="#"
        >
          1
        </a>
      </li>
      <!--v-if-->
      
      <li
        class=""
      >
        <a
          href="#"
        >
          2
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          3
        </a>
      </li>
      
      <!--v-if-->
      <li
        class=""
      >
        <a
          href="#"
        >
          4
        </a>
      </li>
      <li
        class="Vlt-table__pagination__next"
      >
        <a
          href="#"
        >
          Next
        </a>
      </li>
    </ul>
  </div>,
}
`;

exports[`vlt-table renders correctly if footers are available 1`] = `
<div>
  <div
    class="Vlt-table"
    id="tableId"
  >
    <table>
      <thead>
        <tr>
          <!--v-if-->
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        
        
        
      </tbody>
      <tfoot>
        <tr>
          <!--v-if-->
          
          <td>
            <b>
              UX Designer
            </b>
          </td>
          <td>
            <b>
              € 123.56000
            </b>
          </td>
          
        </tr>
      </tfoot>
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table renders correctly if showing checbkoxes but using rows slot  1`] = `
<div>
  <div
    class="Vlt-table"
    id="tableId"
  >
    <table>
      <thead>
        <tr>
          <th
            class="Vlt-checkbox-col"
          >
            <div
              class="Vlt-checkbox"
              id="tableId-headerSelectAllCheckbox"
            >
              <label>
                <span
                  class="Vlt-checkbox__button"
                >
                  <input
                    id="tableId-headerSelectAllCheckbox"
                    type="checkbox"
                  />
                  <span
                    class="Vlt-checkbox__icon"
                  />
                </span>
                  
                <!--v-if-->
              </label>
            </div>
          </th>
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        
        
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table renders correctly select column and Select All behavior is correct 1`] = `
<div>
  <div
    class="Vlt-table"
    id="tableId"
  >
    <table>
      <thead>
        <tr>
          <th
            class="Vlt-checkbox-col"
          >
            <div
              class="Vlt-checkbox"
              id="tableId-headerSelectAllCheckbox"
            >
              <label>
                <span
                  class="Vlt-checkbox__button"
                >
                  <input
                    id="tableId-headerSelectAllCheckbox"
                    type="checkbox"
                  />
                  <span
                    class="Vlt-checkbox__icon"
                  />
                </span>
                  
                <!--v-if-->
              </label>
            </div>
          </th>
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <td>
            <div
              class="Vlt-checkbox"
              id="0-row-checkbox"
            >
              <label>
                <span
                  class="Vlt-checkbox__button"
                >
                  <input
                    id="0-row-checkbox"
                    type="checkbox"
                  />
                  <span
                    class="Vlt-checkbox__icon"
                  />
                </span>
                  
                <!--v-if-->
              </label>
            </div>
          </td>
          
          
        </tr>
        <tr>
          <td>
            <div
              class="Vlt-checkbox"
              id="1-row-checkbox"
            >
              <label>
                <span
                  class="Vlt-checkbox__button"
                >
                  <input
                    id="1-row-checkbox"
                    type="checkbox"
                  />
                  <span
                    class="Vlt-checkbox__icon"
                  />
                </span>
                  
                <!--v-if-->
              </label>
            </div>
          </td>
          
          
        </tr>
        <tr>
          <td>
            <div
              class="Vlt-checkbox"
              id="2-row-checkbox"
            >
              <label>
                <span
                  class="Vlt-checkbox__button"
                >
                  <input
                    id="2-row-checkbox"
                    type="checkbox"
                  />
                  <span
                    class="Vlt-checkbox__icon"
                  />
                </span>
                  
                <!--v-if-->
              </label>
            </div>
          </td>
          
          
        </tr>
        <tr>
          <td>
            <div
              class="Vlt-checkbox"
              id="3-row-checkbox"
            >
              <label>
                <span
                  class="Vlt-checkbox__button"
                >
                  <input
                    id="3-row-checkbox"
                    type="checkbox"
                  />
                  <span
                    class="Vlt-checkbox__icon"
                  />
                </span>
                  
                <!--v-if-->
              </label>
            </div>
          </td>
          
          
        </tr>
        
        
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table renders correctly with a tooltip passed in the column object 1`] = `
<div>
  <div
    class="Vlt-overflow-initial Vlt-table"
    id=""
  >
    <table>
      <thead>
        <tr>
          <!--v-if-->
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            With a tooltip 
            <span
              class="Vlt-tooltip"
            >
              
              <svg
                class="Vlt-icon Vlt-icon--smaller Vlt-grey-500"
              >
                <use
                  xlink:href="#V_Vlt-icon-info"
                />
              </svg>
              
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        
        
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table renders correctly with two columns, "Name" and "Position" 1`] = `
<div>
  <div
    class="Vlt-table"
    id=""
  >
    <table>
      <thead>
        <tr>
          <!--v-if-->
          
          <th
            class="Vlt-table__col--sortable"
          >
            Name 
            <!--v-if-->
          </th>
          <th
            class=""
          >
            Position 
            <!--v-if-->
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        <tr>
          <!--v-if-->
          
          
        </tr>
        
        
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-table renders empty state 1`] = `
<div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="Vlt-empty Vlt-empty--search"
  >
    <div
      class="Vlt-empty__content"
    >
      
      <p>
        There are no results for this search
      </p>
      
    </div>
  </div>
</div>
`;
